# c-plus-plus-ost

./: .clangd  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  pandoc_meta.yaml
week01/exercise_templates/SayHello/: CMakeLists.txt
week01/lecture_examples/: CMakeLists.txt
week01/lecture_examples/Hello/: .cproject  CMakeLists.txt
week01/lecture_examples/HelloMain/: .cproject
week01/lecture_examples/HelloTest/: .cproject
week01/lecture_examples/HelloWorld/: HelloWorld.cpp
week01/lecture_examples/helloworld/: .cproject  CMakeLists.txt
week02/: CMakeLists.txt  README.md
week02/exercise_solutions/: CMakeLists.txt  README.md
week02/exercise_solutions/sol01_stream_state/: CMakeLists.txt  StreamState.cpp
week02/exercise_solutions/sol03_counting/: CMakeLists.txt
week02/exercise_solutions/sol05_miscellaneous/: CMakeLists.txt
week02/exercise_solutions/sol3a_charc/: .cproject  .project  CMakeLists.txt  charc.cpp
week02/exercise_solutions/sol3c_wc/: .cproject  .project  CMakeLists.txt  wc.cpp
week02/exercise_solutions/sol3d_lc-getline/: .cproject  .project  CMakeLists.txt  lc.cpp
week02/exercise_solutions/sol3d_lc-newline/: .cproject  .project  CMakeLists.txt  lc.cpp
week02/exercise_solutions/sol5a_sumf/: .cproject  .project  CMakeLists.txt  sumf.cpp
week02/exercise_solutions/sol5a_sumi/: .cproject  .project  CMakeLists.txt  sumi.cpp
week02/exercise_solutions/sol5b_allcharc/: .cproject  .project  CMakeLists.txt  allcharc.cpp
week02/exercise_solutions/sol5b_averagef/: .cproject  .project  CMakeLists.txt  averagef.cpp
week02/exercise_solutions/sol5b_averagei/: .cproject  .project  CMakeLists.txt  averagei.cpp
week02/exercise_solutions/sol5c_multab/: .cproject  .project  CMakeLists.txt  multab.cpp
week02/exercise_solutions/sol5d_fracttab/: .cproject  .project  CMakeLists.txt  fracttab.cpp
week02/exercise_templates/: CMakeLists.txt
week02/exercise_templates/ex02_calculator/: CMakeLists.txt
week02/exercise_templates/ex03_counting/: CMakeLists.txt
week02/exercise_templates/ex04_experiments/: CMakeLists.txt  ex04b_conditional.cpp  ex04c_fail_stream.cpp
week02/exercise_templates/ex05_miscellaneous/: CMakeLists.txt
week02/exercise_templates/ex3a_charc/: .project  CMakeLists.txt
week02/exercise_templates/ex3b_allcharc/: CMakeLists.txt
week02/exercise_templates/ex3c_wc/: .cproject  .project  CMakeLists.txt
week02/exercise_templates/ex3d_lc/: .project  CMakeLists.txt
week02/lecture_examples/: CMakeLists.txt
week02/lecture_examples/01_typeinfo_for_literals/: .cproject  .project  CMakeLists.txt  typeinfo_for_literals.cpp
week02/lecture_examples/02_type_conversion_and_ub/: .cproject  .project  CMakeLists.txt  type_conversion_and_ub.cpp
week02/lecture_examples/03_bad_relational_operator_example/: .cproject  .project  CMakeLists.txt  bad_relational_operator_example.cpp
week02/lecture_examples/04_string_literals/: .cproject  .project  CMakeLists.txt  string_literals.cpp
week02/lecture_examples/05_greeting/: .cproject  .project  CMakeLists.txt  greeting.cpp
week02/lecture_examples/06_bad_greeting/: .cproject  .project  CMakeLists.txt  bad_greeting.cpp
week02/lecture_examples/07_how_old_are_you_fragile/: .cproject  .project  CMakeLists.txt  how_old_are_you_fragile.cpp
week02/lecture_examples/08_charcount_for_eof_demo/: .cproject  .project  CMakeLists.txt  README.md  charcount.cpp
week02/lecture_examples/09_how_old_are_you_robust/: .cproject  .project  CMakeLists.txt  how_old_are_you_robust.cpp
week02/lecture_examples/10_how_old_are_you_robust_ignoring/: .cproject  .project  CMakeLists.txt  how_old_are_you_robust_ignoring.cpp
week02/lecture_examples/11_formatted_output/: .cproject  .project  CMakeLists.txt  formatted_output.cpp
week02/lecture_examples/12_tolower_chars/: .cproject  .project  CMakeLists.txt  tolower_chars.cpp
week02/lecture_examples/recap_quiz/: .cproject  .project  CMakeLists.txt  Point.h  Square.h  main.cpp  point.hpp  quiz.cpp  square.hpp
week03/: CMakeLists.txt  README.md
week03/exercise_solutions/sol02_counting_algorithms/: CMakeLists.txt
week03/exercise_solutions/sol04_miscellaneous/: CMakeLists.txt
week03/exercise_solutions/sol2a_charc/: .cproject  .project  sol3a_charc.xml
week03/exercise_solutions/sol2b_allcharc/: .cproject  .project
week03/exercise_solutions/sol2c_wc/: .cproject  .project  sol3c_wc.xml
week03/exercise_solutions/sol2d_lc/: .cproject  .project  sol3d_lc.xml
week03/exercise_solutions/sol4_sumi/: .cproject  .project
week03/exercise_solutions/sol5_multab/: .cproject  multab.cpp
week03/exercise_solutions/sol6_fracttab/: .cproject  fracttab.cpp
week03/exercise_templates/ex01_seven_segment/: CMakeLists.txt
week03/exercise_templates/ex02_counting_algorithms/: CMakeLists.txt
week03/exercise_templates/ex04_miscellaneous/: CMakeLists.txt
week03/exercise_templates/ex3a_charc/: .cproject
week03/exercise_templates/ex3b_allcharc/: .cproject  .project
week03/lecture_examples/algorithm_performance/: CMakeLists.txt  README.md  algorithm_performance.cpp
week03/lecture_examples/algorithmdemo/: .cproject  CMakeLists.txt  algorithmdemo.cpp
week03/lecture_examples/cat/: .cproject  CMakeLists.txt  README.md  cat.cpp
week03/lecture_examples/copycat/: .cproject  CMakeLists.txt  README.md  copycat.cpp
week03/lecture_examples/vectordemo/: .cproject  CMakeLists.txt  vectordemo.cpp
week04/: CMakeLists.txt  README.md
week04/exercise_solutions/FunctionValueTable/: .cproject
week04/exercise_solutions/countingToLower/: .cproject
week04/exercise_solutions/sol02_wlist/: CMakeLists.txt
week05/: CMakeLists.txt  README.md
week05/exercise_solutions/: README.md
week05/exercise_templates/: README.md
week05/lecture_examples/: README.md
week06/: CMakeLists.txt  README.md
week07/: CMakeLists.txt  README.md
week08/: CMakeLists.txt  README.md
week09/: CMakeLists.txt  README.md
week11/: CMakeLists.txt  README.md  THEORY_SOLUTIONS.md
week12/: CMakeLists.txt  README.md  THEORY_SOLUTIONS.md
week99/day1/: CMakeLists.txt
(+845 files in other folders)
