add_subdirectory("lecture_examples/01_typeinfo_for_literals")
add_subdirectory("lecture_examples/02_type_conversion_and_ub")
add_subdirectory("lecture_examples/03_bad_relational_operator_example")
add_subdirectory("lecture_examples/04_string_literals")
add_subdirectory("lecture_examples/05_greeting")
add_subdirectory("lecture_examples/06_bad_greeting")
add_subdirectory("lecture_examples/07_how_old_are_you_fragile")
add_subdirectory("lecture_examples/08_charcount_for_eof_demo")
add_subdirectory("lecture_examples/09_how_old_are_you_robust")
add_subdirectory("lecture_examples/10_how_old_are_you_robust_ignoring")
add_subdirectory("lecture_examples/11_formatted_output")
add_subdirectory("lecture_examples/12_tolower_chars")
add_subdirectory("lecture_examples/recap_quiz")