set(CPL_TARGET_WEEK_PREFIX "w03_")

add_subdirectory("lecture_examples/algorithmdemo")
add_subdirectory("lecture_examples/cat")
add_subdirectory("lecture_examples/copycat")
add_subdirectory("lecture_examples/vectordemo")

# add_subdirectory("exercise_templates/ex02_calculator")

add_subdirectory("exercise_solutions/sol02_counting_algorithms")

