set(CPL_TARGET_WEEK_PREFIX "w04_")

# add_subdirectory("lecture_examples/fizzbuzz")
# add_subdirectory("lecture_examples/algorithmdemo")
# add_subdirectory("lecture_examples/cat")
# add_subdirectory("lecture_examples/copycat")
# add_subdirectory("lecture_examples/vectordemo")

add_subdirectory("exercise_templates/ex00_fizzbuzz")
add_subdirectory("exercise_templates/ex02_wlist")
add_subdirectory("exercise_templates/ex03_countingToLower")
add_subdirectory("exercise_templates/ex04_printFunctionTable")
# add_subdirectory("exercise_templates/ex02_counting_algorithms")
# add_subdirectory("exercise_templates/ex04_miscellaneous")

add_subdirectory("exercise_solutions/sol02_wlist")
add_subdirectory("exercise_solutions/sol03_countingToLower")
add_subdirectory("exercise_solutions/sol04_printFunctionTable")
# add_subdirectory("exercise_solutions/sol02_counting_algorithms")
# add_subdirectory("exercise_solutions/sol04_miscellaneous")

