set(CPL_TARGET_WEEK_PREFIX "w04_")

add_subdirectory("lecture_examples/01_functions_right_or_wrong")
add_subdirectory("lecture_examples/02_function_overloading")
add_subdirectory("lecture_examples/03_function_ambiguity")
add_subdirectory("lecture_examples/04_function_default_arguments")
add_subdirectory("lecture_examples/05_function_function_parameters")
add_subdirectory("lecture_examples/06_functions_right_or_wrong_2")
add_subdirectory("lecture_examples/07_lambdas")
add_subdirectory("lecture_examples/08_functions_right_or_wrong_3")
add_subdirectory("lecture_examples/09_function_argument_resolution_sequence")
add_subdirectory("lecture_examples/10_error_handling_undefined_behavior")
add_subdirectory("lecture_examples/11_error_handling_default_result")
add_subdirectory("lecture_examples/12_error_handling_error_value")
add_subdirectory("lecture_examples/13_error_handling_optional_return_value")
add_subdirectory("lecture_examples/14_error_handling_status_side_effect")
add_subdirectory("lecture_examples/15_error_handling_exception")
add_subdirectory("lecture_examples/16_error_handling_right_or_wrong")
add_subdirectory("lecture_examples/17_noexcept")

add_subdirectory("exercise_templates/ex00_fizzbuzz")
add_subdirectory("exercise_templates/ex01_pocketcalculator")
add_subdirectory("exercise_templates/ex02_wlist")
add_subdirectory("exercise_templates/ex03_countingToLower")
add_subdirectory("exercise_templates/ex04_printFunctionTable")
add_subdirectory("exercise_templates/ex05_timingMeasurement")

add_subdirectory("exercise_solutions/sol02_wlist")
add_subdirectory("exercise_solutions/sol03_countingToLower")
add_subdirectory("exercise_solutions/sol04_printFunctionTable")

