set(CPL_TARGET_WEEK_PREFIX "w05_")

add_subdirectory("lecture_examples/01_date")
add_subdirectory("lecture_examples/02_classes_right_or_wrong_1")
add_subdirectory("lecture_examples/03_classes_right_or_wrong_2")
add_subdirectory("lecture_examples/04_classes_right_or_wrong_3")

add_subdirectory("exercise_templates/ex01_word")


