set(CPL_TARGET_WEEK_PREFIX "w06_")

add_subdirectory("lecture_examples/01_namespaces_example")
add_subdirectory("lecture_examples/02_anonymous_namespace")
add_subdirectory("lecture_examples/03_ADL_example")
add_subdirectory("lecture_examples/04_ring_modulo5_mixed_arithmetic")

# add_subdirectory("exercise_templates/ex01_word")


