set(CPL_TARGET_WEEK_PREFIX "w06_")

add_subdirectory("lecture_examples/01_namespaces_example")
add_subdirectory("lecture_examples/02_anonymous_namespace")
add_subdirectory("lecture_examples/03_adl_example")
add_subdirectory("lecture_examples/04_ring_modulo5_mixed_arithmetic")

add_subdirectory("exercise_templates/ex01_date_with_enum")
add_subdirectory("exercise_templates/ex02_toggle_button")
add_subdirectory("exercise_templates/ex03_field5")
add_subdirectory("exercise_templates/ex04_refresher_streams")
add_subdirectory("exercise_templates/ex05_meals")

add_subdirectory("exercise_solutions/sol01_date_with_enum")
add_subdirectory("exercise_solutions/sol02_toggle_button")
add_subdirectory("exercise_solutions/sol03_field5")
