set(CPL_TARGET_WEEK_PREFIX "w07_")

add_subdirectory("lecture_examples/01_stack_and_queue")
add_subdirectory("lecture_examples/02_filter_vowels")
add_subdirectory("lecture_examples/03_count_vowels")
add_subdirectory("lecture_examples/04_count_strings")
add_subdirectory("lecture_examples/05_sorted_string_list")
add_subdirectory("lecture_examples/06_unordered_set")
add_subdirectory("lecture_examples/07_unordered_map")

add_subdirectory("exercise_templates/ex01_container_applications")

add_subdirectory("exercise_solutions/sol01_container_applications")
