set(CPL_TARGET_WEEK_PREFIX "w12_")

add_subdirectory("lecture_examples/lecture01_multiple_bases_ctors")
add_subdirectory("lecture_examples/lecture02_base_without_virtual")
add_subdirectory("lecture_examples/lecture03_base_with_virtual")
add_subdirectory("lecture_examples/lecture04_birds")
add_subdirectory("lecture_examples/lecture05_fuel_non_virtual_dtor")
add_subdirectory("lecture_examples/lecture06_fuel_virtual_dtor")
add_subdirectory("lecture_examples/lecture07_slicing")
add_subdirectory("lecture_examples/lecture08_slicing_books")

add_subdirectory("exercise_templates/ex01_inheritance")
add_subdirectory("exercise_templates/ex02_garden_plan")

add_subdirectory("exercise_solutions/sol02_garden_plan")
