
add_subdirectory(sol3a_charc)
add_subdirectory(sol3c_wc)
add_subdirectory(sol3d_lc-getline)
add_subdirectory(sol3d_lc-newline)
add_subdirectory(sol5a_sumf)
add_subdirectory(sol5a_sumi)
add_subdirectory(sol5b_allcharc)
add_subdirectory(sol5b_averagef)
add_subdirectory(sol5b_averagei)
add_subdirectory(sol5c_multab)
add_subdirectory(sol5d_fracttab)