add_subdirectory(01_typeinfo_for_literals)
add_subdirectory(02_type_conversion_and_ub)
add_subdirectory(03_bad_relational_operator_example)
add_subdirectory(04_string_literals)
add_subdirectory(05_greeting)
add_subdirectory(06_bad_greeting)
add_subdirectory(07_how_old_are_you_fragile)
add_subdirectory(08_charcount_for_eof_demo)
add_subdirectory(09_how_old_are_you_robust)
add_subdirectory(10_how_old_are_you_robust_ignoring)
add_subdirectory(11_formatted_output)
add_subdirectory(12_tolower_chars)
add_subdirectory(recap_quiz)